--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     - The freeCodeCamp Team
 
     -->
-    <p>Hello World!</p>
+    <p>Hello World, we are software developers!!</p>
     <script  src="js/index.js"></script>
   </body>
 </html>
