Added User stories 1 to 9

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     - The freeCodeCamp Team
 
     -->
+    <h1 id="title">Survey Form</h1>
+    <p id="description">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui exercitationem dolore natus, earum, nesciunt ad consequuntur corporis repellendus nisi, eligendi quos voluptatibus harum iusto dignissimos? Sed deserunt omnis enim dolore.
+    </p>
+    
+    <form action="" id="survey-form">
+      <input type="email" name="email" id="email" placeholder="Enter Email" required>
+      <input type="number" id="number" max="100" min="0" placeholder="Enter Number">
+    </form>
+
     <p>Hello World, we are software developers!!</p>
     <script  src="js/index.js"></script>
   </body>
